<resources>
    <string name="app_name">CPS Client For Android</string>

    <string name="connecting">Connecting...</string>

    <string name="connect_info_invalid">连接信息不合法</string>


    <string name="publish">Publish</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Ubsubscribe</string>

    <string name="left">左</string>
    <string name="forward">前</string>
    <string name="right">右</string>
    <string name="backward">后</string>

    <string name="start">开始</string>
    <string name="stop">停止</string>

</resources>
