<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center">

    <Button android:id="@+id/btn_publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish"/>

    <Button android:id="@+id/btn_subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscribe"/>

    <Button android:id="@+id/btn_unsubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unsubscribe"/>

</LinearLayout>