<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button android:id="@+id/btn_center"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_circle"
        android:visibility="invisible"/>
    
    <xyz.jimbray.rosbridge.customviews.CircleButton android:id="@+id/btn_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/btn_center"
        android:layout_margin="15dp"
        android:background="@drawable/bg_circle"
        android:gravity="center"/>

    <xyz.jimbray.rosbridge.customviews.CircleButton android:id="@+id/btn_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/btn_center"
        android:layout_margin="15dp"
        android:background="@drawable/bg_circle"
        android:gravity="center"/>

    <xyz.jimbray.rosbridge.customviews.CircleButton android:id="@+id/btn_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:layout_above="@id/btn_center"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:background="@drawable/bg_circle"
        android:gravity="center"/>

    <xyz.jimbray.rosbridge.customviews.CircleButton android:id="@+id/btn_backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backward"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_center"
        android:layout_margin="15dp"
        android:background="@drawable/bg_circle"
        android:gravity="center"/>

</RelativeLayout>